web/book/tests/examples/snapshots/examples__book__transforms__aggregate__examples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\ngroup {title, country} (\n  aggregate {\n    average salary,\n    ct = count salary,\n  }\n)\n"
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(salary) AS ct
FROM
  employees
GROUP BY
  title,
  country

